examples/test/testpolicy18536.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18536
  namespace: namespace83
spec:
  podSelector:
    matchLabels:
      key30: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value23
          key10: value49
          key23: value17
      podSelector:
        matchLabels:
          key9: value42
          key26: value42
